--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -b stage-1 -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
